@@ -1,3 +1,7 @@
+Sun Jun 23 14:35:51 BST 2013  Colin Watson  <cjwatson@debian.org>
+
+	* src/manp.c (def_path): Expand wildcards in MANDATORY_MANPATH.
+
 Sun Jun 23 14:29:34 BST 2013  Colin Watson  <cjwatson@debian.org>
 
 	* src/manp.c (guess_manpath): Honour MAN_TEST_DISABLE_PATH
